--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Cup-and-The-Falcon_72318
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 72318-h/images/cover.jpg
 creator:
   author:
     agent_name: Tennyson, Alfred Tennyson, Baron
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/2987
     wikipedia: https://en.wikipedia.org/wiki/Alfred,_Lord_Tennyson
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/72318#The-Cup-and-The-Falcon
 gutenberg_issued: '2023-12-04'
 identifiers:
   gutenberg: '72318'
